# library_management

library_management/: .gitignore  README.md  pyproject.toml  setup.py
library_management/library_management/: hooks.py  patches.txt
library_management/library_management/api/: api.py
library_management/library_management/doctype/book/: book.js  book.json  book.py
library_management/library_management/doctype/book_transaction/: book_transaction.js  book_transaction.json  book_transaction.py
library_management/library_management/doctype/library_member/: library_member.js  library_member.json  library_member.py
library_management/library_management/doctype/library_settings/: library_settings.json  library_settings.py
library_management/library_management/install/: install.py
library_management/library_management/patches/v1_0/: create_default_settings.py
library_management/library_management/public/js/: library_management.js
library_management/library_management/report/overdue_books_report/: overdue_books_report.json  overdue_books_report.py
library_management/library_management/tasks/: tasks.py
library_management/library_management/tests/: test_library_management.py
library_management/library_management/workspace/library_management/: library_management.json
