[project]
name = "library_management"
authors = [
    {name = "Your Name", email = "your@email.com"}
]
description = "Library Management System for ERPNext v15"
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]

dependencies = [
    "frappe",
]

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.module]
name = "library_management"
